--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -33,13 +33,26 @@
     </div>
 
     <!-- Search model -->
-    <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
-        </div>
+    <div class="search-model" style="color: white; background-image: url('../../Content/img/slider-1.jpg');">
+
+
+
+
+        @using (Html.BeginForm("Index", "Product"))
+        {
+            <b>
+                Search by:
+            </b>
+            @Html.RadioButton("searchBy", "NameProduct") <text>Name Product</text>
+
+            @Html.RadioButton("searchBy", "None", true)<text>None</text>
+            @Html.TextBox("search")<input type="submit" value="Go" class="search-trigger" />
+        }
+
+
+
+
+
     </div>
     <!-- Search model end -->
     <!-- Header Section Begin -->
@@ -88,9 +101,9 @@
                         </li>
                         <li>
                             <a class="active">Category</a><ul class="sub-menu">
-                                <li class="product-controls">
+                                @*<li class="product-controls">
                                     @{ Html.RenderAction("_CategoriesPartial", "Category"); }
-                                </li>
+                                </li>*@
 
                             </ul>
 
