--- a/Project/Areas/Admin/Views/Product/Details.cshtml
+++ b/Project/Areas/Admin/Views/Product/Details.cshtml
@@ -5,12 +5,28 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Product Details</h2>
+<h2>Details</h2>
 
 <div>
     <h4>Product</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Categories.CategoryName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Categories.CategoryName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Tags.TagName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tags.TagName)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.ProductDescription)
         </dt>
@@ -60,28 +76,9 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Image)
+            <img src="~/ProductImage/@Model.Image" width="50" height="50" />
         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CategoryID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CategoryID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TagID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TagID)
-        </dd>
 
     </dl>
 </div>
