--- a/Project/Areas/Admin/Views/Users/Index.cshtml
+++ b/Project/Areas/Admin/Views/Users/Index.cshtml
@@ -52,12 +52,12 @@
             @Html.DisplayFor(modelItem => item.UserAddress)
         </td>
         <td>
-            <form action="/Admin/Product/Delete/@item.UserID" method="post">
+            <form action="/Admin/Users/Delete/@item.UserID" method="post">
                 @Html.AntiForgeryToken()
-                <a href="/Admin/Product/Edit/@item.UserID">
+                <a href="/Admin/Users/Edit/@item.UserID">
                     <i class="fas fa-edit"></i>
                 </a>
-                <a href="/Admin/Product/Details/@item.UserID">
+                <a href="/Admin/Users/Details/@item.UserID">
                     <i class="fas fa-info-circle"></i>
                 </a>
                 <button class="bg-transparent border-0" type="submit" onclick="return confirm('Are you sure to delete this User?');">
