--- a/Project/Views/Product/GetLastestProduct.cshtml
+++ b/Project/Views/Product/GetLastestProduct.cshtml
@@ -5,16 +5,9 @@
         <div class="single-product-item">
             <figure>
                 <a href="#">
-                    @if (item.TagID == 1)
-                    {<img src="@Url.Content("~/ProductImage/Adidas/" + item.Image)" alt="" />}
-                    @if (item.TagID == 2)
-                    {<img src="@Url.Content("~/ProductImage/Nike/" + item.Image)" alt="" />}
-                    @if (item.TagID == 3)
-                    {<img src="@Url.Content("~/ProductImage/Lacoste/" + item.Image)" alt="" />}
-                    @if (item.TagID == 4)
-                    {<img src="@Url.Content("~/ProductImage/MLB/" + item.Image)" alt="" />}
-                    @if (item.TagID == 5)
-                    {<img src="@Url.Content("~/ProductImage/Kenzo/" + item.Image)" alt="" />}
+                    
+                    <img src="@Url.Content("~/ProductImage/" + item.Image)" alt="" />
+                    
                 </a>
                 <div class="p-status">new</div>
             </figure>
