--- a/Project/Views/Home/Contact.cshtml
+++ b/Project/Views/Home/Contact.cshtml
@@ -24,18 +24,18 @@
                 <form action="#" class="contact-form">
                     <div class="row">
                         <div class="col-lg-6">
-                            <input type="text" placeholder="First Name">
+                            <input type="text" placeholder="First Name" id="firtname">
                         </div>
                         <div class="col-lg-6">
-                            <input type="text" placeholder="Last Name">
+                            <input type="text" placeholder="Last Name" id="lastname">
                         </div>
                         <div class="col-lg-12">
-                            <input type="email" placeholder="E-mail">
-                            <input type="text" placeholder="Subject">
-                            <textarea placeholder="Message"></textarea>
+                            <input type="email" placeholder="E-mail" id="email">
+                            <input type="text" placeholder="Subject" id="subject">
+                            <textarea placeholder="text" id="message"></textarea>
                         </div>
                         <div class="col-lg-12 text-right">
-                            <button type="submit">Send message</button>
+                            <button type="submit" id="btnSendata">Send message</button>
                         </div>
                     </div>
                 </form>
