"ma~ hoa' mat khau bang bcript"

--- a/Project/Views/User/Login.cshtml
+++ b/Project/Views/User/Login.cshtml
@@ -6,7 +6,10 @@
 }
 
 
-
+@if(TempData["error"] != null)
+            {
+<span style="color:red">@TempData["error"]</span>
+            }
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
