--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<style>
+   #product-list img{
+       height:250px;
+
+   }
+</style>
 
 @model IEnumerable<Project.Models.Product>
 
