--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -23,6 +23,16 @@
     <link rel="stylesheet" href="~/Content/css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="~/Content/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="~/Content/css/style.css" type="text/css">
+
+
+    <style>
+        .subCagegory li{
+            padding-left: 20px ;
+        }
+            .subCagegory li:hover {
+                cursor:pointer;
+            }
+    </style>
 </head>
 
 <body>
@@ -48,7 +58,7 @@
             <div class="inner-header">
                 <div class="logo">
                     <a href="/Home/Index">
-                        <img src="~/Content/img/logo.png" width="180" height="60">
+                        <img src="~/Content/img/Screenshot_1.png" width="130" height="60">
                     </a>
                 </div>
                 <div class="header-right">
@@ -87,7 +97,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a class="active">Category</a><ul class="sub-menu">
+                            <a class="active">Category</a><ul class="sub-menu subCagegory">
                                 <li class="product-controls">
                                     @{ Html.RenderAction("_CategoriesPartial", "Category"); }
                                 </li>
